--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
-import React from 'react';
-import ReactDOM from 'react-dom';
-import './index.css';
-
-<script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+<!DOCTYPE html>
+<html>
+  <head>
+    <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
 <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+  </head>
+  <body>
+    <div id="app01"></div>
+    <div id="app02"></div>
 
-
-class Square extends React.Component { 
-  constructor(props){
-    super(props);
+    <script type="text/babel">
+    class Square extends React.Component { 
+       constructor(props){
+       super(props);
   }
   render() {
     return (
@@ -123,3 +126,9 @@ class Square extends React.Component {
     }
     return null;
   }
+      
+
+    </script>
+
+  </body>
+</html>
